// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Should display content with default classnames 1`] = `
<div>
  <p
    class="font-sans text-typography-prominent text-body-md space-y-paragraphSpacing-body-md leading-body-md font-regular"
  >
    Text content
  </p>
</div>
`;

exports[`Text Should have correct classnames with size xl 1`] = `
<div>
  <p
    class="font-sans text-typography-prominent text-body-xl space-y-paragraphSpacing-body-xl leading-body-xl font-regular"
  >
    Text content
  </p>
</div>
`;

exports[`Text Should have correct classnames with size xl and type underline 1`] = `
<div>
  <p
    class="font-sans text-typography-prominent text-body-xl space-y-paragraphSpacing-body-xl leading-body-xl font-regular underline"
  >
    Text content
  </p>
</div>
`;
